<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_100">


<!-- Scritta "Dettagli prenotazione" -->
    <TextView
        android:id="@+id/bookingDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bookingDetailsText"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/sportChosenTextView"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:text="@string/sport_chosen"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="308dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="TextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey_400" />

            <TextView
                android:id="@+id/sportFacilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sport_field"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="TextView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey_400" />

            <TextView
                android:id="@+id/dateAndTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/timeslot"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="80dp"

                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="TextView" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/cardview2"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cardview2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="-5dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/missingPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/missingPlayersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/missingPlayersTitle"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/missingPlayersText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:autofillHints="Insert missing players"
                    android:background="@android:drawable/editbox_background"
                    android:backgroundTint="@color/grey_200"
                    android:drawablePadding="16dp"
                    android:inputType="phone"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/baseline_people_24" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintTop_toBottomOf="@+id/cardview3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:contentDescription="@string/list_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/optionsscrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview2"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="39dp"
        android:padding="16dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>