<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_100"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".ui.NewProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationY="-110dp"
            app:srcCompat="@drawable/circle" />


        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/profileView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/black_baseline_person_24" />

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@drawable/sportrectangle"
            android:clickable="true"
            android:elevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="showPopup"
            android:padding="16dp"
            android:translationX="-40dp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:paddingTop="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:autofillHints="Insert name"
                    android:background="@android:drawable/editbox_background"
                    android:backgroundTint="@color/grey_900"
                    android:drawablePadding="16dp"
                    android:inputType="text"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/baseline_person_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/nickname"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/textViewNickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@android:drawable/editbox_background"
                    android:backgroundTint="@color/grey_900"
                    android:drawablePadding="16dp"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/baseline_person_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textViewMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:autofillHints="Insert mail"
                android:background="@android:drawable/editbox_background"
                android:backgroundTint="@color/grey_900"
                android:drawablePadding="16dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/baseline_email_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".60"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/birth"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight=".70"
                    android:background="@android:drawable/editbox_background"
                    android:backgroundTint="@color/grey_900"
                    android:drawablePadding="16dp"
                    android:inputType="date"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/baseline_cake_24" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/textViewPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@android:drawable/editbox_background"
                    android:backgroundTint="@color/grey_900"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/baseline_phone_iphone_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/achievements_edit_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/evaluation_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/editable_evaluation_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:orientation="horizontal"
                    app:layoutManager="LinearLayoutManager" />
            </LinearLayout>

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/language"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginRight="7dp"
                        android:layout_marginBottom="7dp"
                        android:background="@android:drawable/editbox_background"
                        android:backgroundTint="@color/grey_900"
                        android:hint="@string/selected_languages_hint"
                        android:drawablePadding="16dp"
                        android:padding="14dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".70"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/buttonLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginRight="7dp"
                        android:layout_marginBottom="7dp"
                        android:drawableTop="@drawable/baseline_edit_24"
                        android:padding="14dp"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/achievements_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textViewBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:background="@android:drawable/editbox_background"
                android:backgroundTint="@color/grey_900"
                android:drawablePadding="16dp"
                android:padding="14dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/baseline_edit_24" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>